generator client {
  provider = "prisma-client-js"
}

generator pothos {
  provider = "prisma-pothos-types"
}

generator dbml {
  provider            = "prisma-dbml-generator"
  outputName          = "lireddit.dbml"
  projectName         = "lireddit"
  projectDatabaseType = "PostgreSQL"
  projectNote         = "A Reddit clone"
  mapToDbSchema       = "true"
}

generator docs {
  provider = "node node_modules/prisma-docs-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model Post {
  id        Int            @id @default(autoincrement())
  createdAt DateTime       @default(now())
  updatedAt DateTime       @updatedAt
  title     String         @db.VarChar(255)
  content   String?
  published Boolean        @default(false)
  authorId  Int
  points    Int            @default(0)
  author    User           @relation(fields: [authorId], references: [id])
  votes     UsersOnPosts[]
}

model UsersOnPosts {
  postId Int
  userId Int
  value  Boolean
  post   Post    @relation(fields: [postId], references: [id], onDelete: Cascade)
  user   User    @relation(fields: [userId], references: [id])

  @@id([postId, userId])
}

model Profile {
  id     Int     @id @default(autoincrement())
  bio    String?
  userId Int     @unique
  user   User    @relation(fields: [userId], references: [id])
}

model User {
  id       Int            @id @default(autoincrement())
  email    String         @unique
  name     String?
  password String
  posts    Post[]
  profile  Profile?
  votes    UsersOnPosts[]
}
