//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "lireddit" {
  database_type: 'PostgreSQL'
  Note: 'A Reddit clone'
}

Table Post {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  title String [not null]
  content String
  published Boolean [not null, default: false]
  authorId Int [not null]
  points Int [not null, default: 0]
  author User [not null]
  votes UsersOnPosts [not null]
}

Table UsersOnPosts {
  postId Int [not null]
  userId Int [not null]
  value Boolean [not null]
  post Post [not null]
  user User [not null]

  indexes {
    (postId, userId) [pk]
  }
}

Table Profile {
  id Int [pk, increment]
  bio String
  userId Int [unique, not null]
  user User [not null]
}

Table User {
  id Int [pk, increment]
  email String [unique, not null]
  name String
  password String [not null]
  posts Post [not null]
  profile Profile
  votes UsersOnPosts [not null]
}

Ref: Post.authorId > User.id

Ref: UsersOnPosts.postId > Post.id [delete: Cascade]

Ref: UsersOnPosts.userId > User.id

Ref: Profile.userId - User.id